--- a/Django_Expenses/templates/partials/_sidebar.html
+++ b/Django_Expenses/templates/partials/_sidebar.html
@@ -31,7 +31,7 @@
         </h6>
         <ul class="nav flex-column mb-2">
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'cost:stats' %}">
                     Expenses Summary
                 </a>
             </li>
